--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.0.4",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
@@ -29,6 +30,8 @@
     "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
