--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "little-wheels",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "这是一个基于react自用轮子库",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dance-T/little-wheels.git"
+  },
   "type": "module",
   "main": "dist/ui.cjs.js",
   "module": "dist/ui.es.js",
