--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "little-wheels",
-  "version": "1.1.2",
+  "version": "1.1.5",
   "description": "这是一个基于react自用轮子库",
   "repository": {
     "type": "git",
     "url": "https://github.com/dance-T/little-wheels.git"
   },
   "type": "module",
-  "main": "dist/ui.cjs.js",
-  "module": "dist/ui.es.js",
-  "types": "dist/ui.es.d.ts",
+  "main": "dist/littleWheels.cjs.js",
+  "module": "dist/littleWheels.es.js",
+  "types": "dist/littleWheels.es.d.ts",
   "files": [
     "dist"
   ],
