--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "little-wheels",
-  "version": "1.1.5",
+  "version": "1.1.8",
   "description": "这是一个基于react自用轮子库",
   "repository": {
     "type": "git",
@@ -31,7 +31,8 @@
     "@vitejs/plugin-react-swc": "^3.10.2",
     "sass": "^1.89.2",
     "vite": "^6.3.5",
-    "vite-plugin-dts": "^4.5.4"
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-remove-console": "^2.2.0"
   },
   "dependencies": {
     "jwt-decode": "^4.0.0",
